# fclabels

./: .gitignore  .travis.yml  CHANGELOG  Demo.hs  README  README.md  TestTH.lhs  fclabels.cabal
Data/Record/: Label.hs
Data/Record/Label/: TH.hs
bench/: Benchmark.hs  run.sh
src/Data/: Label.hs
src/Data/Label/: Abstract.hs  Base.hs  Derive.hs  Either.hs  Failing.hs  Label.hs  Maybe.hs  MaybeM.hs  Monadic.hs  Mono.hs  Partial.hs  PartialM.hs  Point.hs  Poly.hs  Pure.hs  PureM.hs  Simple.hs  TH.hs  Total.hs  TotalM.hs
src/Data/Label/Monadic/: Maybe.hs
src/Data/Record/: Label.hs
src/Data/Record/Label/: Abstract.hs  Base.hs  Core.hs  Maybe.hs  Monadic.hs  Pure.hs  TH.hs
src/Data/Record/Label/Monadic/: Maybe.hs
test/: .ghci  .gitignore  Deriving.hs  Gadt.hs  Laws.hs  TestArrow.hs  TestSuite.hs  TestTH.lhs  fclabels-testsuite.cabal  run.sh
