Name:          fclabels
Version:       1.1.7.1
Author:        Sebastiaan Visser, Erik Hesselink, Chris Eidhof, Sjoerd Visscher
               with lots of help and feedback from others.
Synopsis:      First class accessor labels.
Description:   This package provides first class labels that can act as
               bidirectional record fields. The labels can be derived
               automatically using Template Haskell which means you don't have
               to write any boilerplate yourself. The labels are implemented as
               lenses and are fully composable. Labels can be used to /get/,
               /set/ and /modify/ parts of a datatype in a consistent way.
               .
               See "Data.Label" for an introductory explanation.
               .
               Internally lenses are not tied to Haskell functions directly,
               but are implemented as arrows. Arrows allow the lenses to be run
               in custom computational contexts. This approach allows us to
               make partial lenses that point to fields of multi-constructor
               datatypes in an elegant way.
               .
               See the "Data.Label.Maybe" module for the use of partial labels.
               .
               > 1.1.6 -> 1.1.7
               >   - Fixed compilation issue on newer GHC using clang.
               >     Thanks to Audrey Tang.

Maintainer:    Sebastiaan Visser <code@fvisser.nl>
Homepage:      https://github.com/sebastiaanvisser/fclabels
Bug-Reports:   http://github.com/sebastiaanvisser/fclabels/issues

License:       BSD3
License-File:  LICENSE
Category:      Data, Lenses
Cabal-Version: >= 1.6
Build-Type:    Simple

Library
  HS-Source-Dirs: src

  Exposed-Modules:
    Data.Label
    Data.Label.Abstract
    Data.Label.Derive
    Data.Label.Total
    Data.Label.TotalM
    Data.Label.Partial
    Data.Label.PartialM
    Data.Label.Failing

  GHC-Options: -Wall
  Build-Depends:
      base                       < 5
    , template-haskell >= 2.2 && < 2.9
    , mtl              >= 1.0 && < 2.2
    , transformers     >= 0.2 && < 0.4

Source-Repository head
  Type:     git
  Location: git://github.com/sebastiaanvisser/fclabels.git

