Name:           fclabels-testsuite
Version:        0.1
Build-Type:     Simple
Cabal-Version:  >= 1.6

Executable suite
  HS-Source-Dirs:  ../src .
  Main-Is:         TestSuite.hs

  Build-Depends:
      base                       < 5
    , template-haskell >= 2.2 && < 2.9
    , mtl              >= 1.0 && < 2.3
    , transformers     >= 0.2 && < 0.5
    , HUnit            >= 1.2 && < 1.3

  Ghc-Options: -O2 -Wall -fhpc -threaded

